Just checking again

--- a/src/app/acknowledge/acknowledge.component.html
+++ b/src/app/acknowledge/acknowledge.component.html
@@ -35,7 +35,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li> <a href="http://ec2-3-236-215-25.compute-1.amazonaws.com:31750/student/survey/{{studentId}}" (click)="gotoDetails(studentId)">{{studentId}}</a>
+                        <li> <a href="http://ec2-3-236-215-25.compute-1.amazonaws.com:31750/SWE645_RestBackend/student/survey/{{studentId}}" (click)="gotoDetails(studentId)">{{studentId}}</a>
                             <br />
                     </ul>
                 </td>
