--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -2,7 +2,7 @@
 <app-header> </app-header>
 <div class="nav">
 	<ul>
-		<li><a href="http://ec2-3-236-215-25.compute-1.amazonaws.com:31748/acknowledge">DISPLAY</a></li>
+		<li><a href="">HOME</a></li>
 	</ul>
 </div>
 <!--form with autocomplete feature -->
